@@ -1,3 +1,9 @@
+2012-09-16  Simson Garfinkel  <simsong@Mucha.local>
+
+	* src/flow.cpp (flow::filename): TM_FORMAT is now "%Y-%m-%dT%H:%M:%SZ"
+
+	* src/xml.cpp (xml::add_DFXML_execution_environment): TM_FORMAT is now always "%Y-%m-%dT%H:%M:%SZ"
+
 2012-09-11  Simson Garfinkel  <simsong@Mucha.local>
 
 	* src/datalink.cpp (dl_ethernet): now handles ETHERTYPE_LOOPBACK not defined.
